# spook

./: LICENSE  README.md  flake.nix  hie.yaml  spook.cabal
src/: ConsensusTypes.hs  Core.hs  Forkchoice.hs  Main.hs  SSZ.hs
tests/: Spec.hs
tests/fixtures/: attestation.ssz  beacon_block_body_blinded_bellatrix.ssz  eth1_data.ssz  execution_payload_header.ssz  sync_aggregate.ssz
